--- a/examples/todo_full_example/Dockerfile
+++ b/examples/todo_full_example/Dockerfile
@@ -9,13 +9,14 @@ ENV SCHEME=scheme
 ENV PATH="${PATH}:/root/.idris2/bin"
 RUN make bootstrap && make install && make clean && make all && make install && make install-api
 RUN echo 'export PATH="/root/.idris2/bin/:${PATH}"' >> "${HOME}/.bashrc" && echo 'alias idris=idris2' >> "${HOME}/.bashrc"
+RUN echo 'export NODE_PATH="`npm root -g`"' >> "${HOME}/.bashrc"
+RUN npm install -g node-static
 WORKDIR /deps
+ARG CACHE_DATE=2022-11-01
 RUN git clone https://github.com/rbarreiro/ifui.git
 WORKDIR /deps/ifui
 RUN idris2  --install ifui.ipkg
-RUN echo 'export NODE_PATH="`npm root -g`"' >> "${HOME}/.bashrc"
-RUN npm install -g node-static
 WORKDIR /app
 COPY . .
 RUN make
-CMD export NODE_PATH="`npm root -g`";node build/exec/backend.js
+CMD export NODE_PATH="`npm root -g`";node backend.js
