--- a/examples/todo_full_example/Makefile
+++ b/examples/todo_full_example/Makefile
@@ -12,4 +12,9 @@ build-backend:
 build-frontend:
 	idris2 -p ifui -p contrib --codegen javascript frontend.idr -o frontend.js
 
+run : all
+	node backend.js
 
+clean :
+	rm -rf build
+	rm -f backend.js www/frontend.js
