--- a/examples/todo_full_example/Dockerfile
+++ b/examples/todo_full_example/Dockerfile
@@ -14,7 +14,7 @@ RUN npm install -g node-static
 RUN npm install -g ws
 RUN npm install -g rethinkdb
 WORKDIR /deps
-ARG CACHE_DATE=2022-12-26
+ARG CACHE_DATE=2022-12-26_2
 RUN git clone https://github.com/rbarreiro/ifui.git
 WORKDIR /deps/ifui
 RUN idris2  --install ifui.ipkg
